@startuml Booking

!include ./BookingId/BookingId.pu
!include ./CalendarEventId/CalendarEventId.pu
!include ./Name/Name.pu
!include ./PhoneNumber/PhoneNumber.pu
!include ./CarId/CarId.pu
!include ./MenuId/MenuId.pu
!include ./OptionId/OptionId.pu
!include ./TimeRange/TimeRange.pu
!include ./BookingStatus/BookingStatus.pu
!include ../shared/Money/Money.pu

class "Booking(予約)" as Booking << (R,red) RootEntity >> {
  + bookingId: BookingId
  + calendarEventId: CalendarEventId [0..1]
  + customerName: Name
  + phoneNumber: PhoneNumber
  + carId: CarId
  + menuId: MenuId
  + optionIds: OptionId[*]
  + timeRange: TimeRange
  + status: BookingStatus
  + price: Money
}

' 関係（Bookingが内包するVO）
Booking *-- BookingId
Booking *-- Name
Booking *-- PhoneNumber
Booking *-- TimeRange
Booking *-- Money
Booking *-- BookingStatus

' Optional（0..1）を明示
Booking o-- "0..1" CalendarEventId

' 関係（他コンテキストをID参照するVO）
Booking --> CarId
Booking --> MenuId
Booking --> OptionId

note right of Booking
  【Bookingの基本ルール】

  ■ TODO（未実装）
  - customerName: Name
  - phoneNumber: PhoneNumber
  ※現状の Booking.ts にはまだ存在しない（将来的に追加予定）

  ■ ステータス
  - Draft      : 下書き（作成直後）
  - Confirmed  : 確定
  - Cancelled  : キャンセル
  - Completed  : 完了

  ■ 外部カレンダー連携（任意 / 1:1対応）
  - Booking は外部カレンダー予定と 1:1 で対応できる
  - calendarEventId は外部カレンダー側の予定ID
  - Draft の段階でも「時間枠確保」のため予定を作成してよい（仮押さえ運用）
  - 外部カレンダー上で予定が削除された場合、
    対応する Booking はキャンセル扱いにする（自動キャンセル）

  ※外部カレンダーの製品名やAPI仕様、metadataの持ち方はドメイン外とし、
    インテグレーション設計（アプリケーション層/インフラ層）で扱う。

  ■ 変更できるタイミング
  - Draft のときだけ変更できる:
      - price の変更（changePrice）
      - timeRange の変更（reschedule）
      - carId / menuId / optionIds の変更
  - Confirmed / Cancelled / Completed では上記は原則変更しない
    （確定後に変更が必要な場合は、別ユースケースとして扱う）

  ■ optionIds の制約
  - optionIds は重複を許さない（同じ OptionId を2回入れない）

  ■ 確定後の「時間が増える変更」の扱い（概念）
  - 剥がし追加 / 時間が長くなる施工への変更 / リア追加 などで施工時間が伸びる変更は
    予約枠に影響するため即時反映しない
  - いったん「要リスケ（NeedsReschedule）」扱いとし、
    外部カレンダーで枠確保後に Booking を更新する
    （NeedsReschedule はステータス化せず概念として扱ってよい）
end note

@enduml
